# Orderly_SMP

./: CMakeLists.txt  CreateProfile.cpp  downloader.cpp  main.cpp  parser.cpp  unzipper.cpp
.github/workflows/: buildapp.yml
include/: CreateProfile.hpp  Settings.hpp  downloader.hpp  unzipper.hpp
resources/: Info.plist  icon.icns  orderlysmp.desktop.in
